test_files/netlist_connected/valid/valid_05.net
V1 Vdd 0 12
R1 Vdd drain 1k
R2 gate 0 1Meg
J1 drain gate 0 2N3819
.tran 1m
.backanno
.end
