test_files/netlist_connected/invalid/invalid_10_line_6.net
V1 Vcc 0 12
R1 Vcc N001 10k
R2 N002 0 1k
Q1 N001 N003 N002 0 2N3904
R3 Vcc N003 100k
R4 Vcc N004 100k
.tran 1m
.backanno
.end
